--- a/styles.css
+++ b/styles.css
@@ -65,9 +65,32 @@ body{
     color: #333;
     text-decoration: none;
     width: 650px;
+    /* height: 500px; */
     border: none;
     border-radius: 10px;
+    /* overflow: auto; */
 }
+
+/* .style-2::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.style-2::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.style-2::-webkit-scrollbar-thumb
+{
+	border-radius: 10px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #37d7b2;
+} */
+
 
 #fieldset00{
     display: inline-flex;
